feat(Platform Feedback): create Platform Feedback API
