# docs/swagger.json
@@ -28,7 +28,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Feedback"
+                    "feedbacks"
                 ],
                 "summary": "Get all feedbacks",
                 "parameters": [
@@ -54,6 +54,12 @@
                         "type": "string",
                         "description": "Sort order (ASC or DESC)",
                         "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Rating",
+                        "name": "rating",
                         "in": "query"
                     },
                     {
@@ -103,7 +109,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Feedback"
+                    "feedbacks"
                 ],
                 "summary": "Update an existing feedback",
                 "parameters": [
@@ -157,7 +163,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Feedback"
+                    "feedbacks"
                 ],
                 "summary": "Create a new feedback",
                 "parameters": [
@@ -211,7 +217,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Feedback"
+                    "feedbacks"
                 ],
                 "summary": "Remove a feedback",
                 "parameters": [
@@ -268,7 +274,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Feedback"
+                    "feedbacks"
                 ],
                 "summary": "Get feedbacks by user",
                 "parameters": [
@@ -301,6 +307,12 @@
                         "type": "string",
                         "description": "Sort order (ASC or DESC)",
                         "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Rating",
+                        "name": "rating",
                         "in": "query"
                     },
                     {
@@ -346,7 +358,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Feedback"
+                    "feedbacks"
                 ],
                 "summary": "Get a single feedback by ID",
                 "parameters": [
@@ -363,6 +375,301 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/entity.Feedback"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data. Please try again.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/platform-feedbacks": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve a paginated list of platform feedbacks with optional filters",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "platform-feedbacks"
+                ],
+                "summary": "Get all platform feedbacks",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search keyword",
+                        "name": "keyword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter property",
+                        "name": "filter_prop",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort order (ASC or DESC)",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Account ID",
+                        "name": "account_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Rating",
+                        "name": "rating",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.PaginationDataResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data. Please try again.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "platform-feedbacks"
+                ],
+                "summary": "Update an existing feedback",
+                "parameters": [
+                    {
+                        "description": "Update Feedback Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdatePlatformFeedbackRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data. Please try again.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "You have no rights to access this action.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "There is something wrong in the system during the process. Please try again later.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "platform-feedbacks"
+                ],
+                "summary": "Create a new feedback",
+                "parameters": [
+                    {
+                        "description": "Create Platform Feedback Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreatePlatformFeedbackRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data. Please try again.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "You have no rights to access this action.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "There is something wrong in the system during the process. Please try again later.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/platform-feedbacks/user/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieve platform feedbacks filtered by customer ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "platform-feedbacks"
+                ],
+                "summary": "Get platform feedbacks by user",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search keyword",
+                        "name": "keyword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter property",
+                        "name": "filter_prop",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Sort order (ASC or DESC)",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Rating",
+                        "name": "rating",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.PaginationDataResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid data. Please try again.",
+                        "schema": {
+                            "$ref": "#/definitions/response.MessageApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/platform-feedbacks/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "platform-feedbacks"
+                ],
+                "summary": "Get a single platform feedback by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Platform Feedback ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.PlatformFeedback"
                         }
                     },
                     "400": {
@@ -408,6 +715,29 @@
                 }
             }
         },
+        "entity.PlatformFeedback": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "feedback_id": {
+                    "type": "integer"
+                },
+                "payment_id": {
+                    "type": "integer"
+                },
+                "rating": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.CreateFeedbackRequest": {
             "type": "object",
             "required": [
@@ -430,6 +760,28 @@
                     "type": "integer"
                 },
                 "tour_guide_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.CreatePlatformFeedbackRequest": {
+            "type": "object",
+            "required": [
+                "account_id",
+                "payment_id",
+                "rating"
+            ],
+            "properties": {
+                "account_id": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "payment_id": {
+                    "type": "integer"
+                },
+                "rating": {
                     "type": "integer"
                 }
             }
@@ -460,6 +812,27 @@
                 },
                 "request": {
                     "$ref": "#/definitions/request.RemoveFeedbackRequest"
+                }
+            }
+        },
+        "request.UpdatePlatformFeedbackRequest": {
+            "type": "object",
+            "required": [
+                "actor_id",
+                "feedback_id"
+            ],
+            "properties": {
+                "actor_id": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "feedback_id": {
+                    "type": "integer"
+                },
+                "rating": {
+                    "type": "integer"
                 }
             }
         },
